# bb_monitor

./: .gitignore  README.md  bb_monitor.py  bb_monitor_data.py  bb_monitor_multi.py  bb_monitor_systemcheck.py  default_config.py  default_config_systemcheck.py  diagnose_ping.sh  monitor_hive copy.ipynb  plotmetrics.py  pyproject.toml  test_confidence_tuning.py  test_daily_consumption.py  test_detection_vis.py  test_multi_snapshot.py  test_rolling_window.py  user_config_starter.py
src/: data_processing.py  mon.py  monitor_exit_visits.py  monitor_feeder_visits.py  monitor_hive.py  monitor_temp.py  monitor_weight.py  plot_population_history.py  plotting.py  systemcheck_core.py  temp_monitor_hive.py
src/bb_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_hive_plot.py  test_systemcheck_core.py  test_systemcheck_tick.py
